--- a/projects/rilke-ui/src/lib/components/card/card-content/card-content.component.scss
+++ b/projects/rilke-ui/src/lib/components/card/card-content/card-content.component.scss
@@ -1,9 +1,9 @@
 ril-card-content {
 	font-size: $f-size-md;
-	color: $main-contrast-500;
+	color: main-contrast(500);
 
 	p {
 		font-size: $f-size-md;
-		color: $main-contrast-500;
+		color: main-contrast(500);
 	}
 }
