--- a/projects/rilke-ui/src/lib/components/menu/menu.component.scss
+++ b/projects/rilke-ui/src/lib/components/menu/menu.component.scss
@@ -15,7 +15,7 @@ ril-menu {
 }
 
 .mat-menu-panel {
-	background: $main-800;
+	background: main-palette(800);
 	border-radius: $r-md !important;
 
 	&::-webkit-scrollbar {
