--- a/projects/rilke-ui/src/lib/components/card/card.component.scss
+++ b/projects/rilke-ui/src/lib/components/card/card.component.scss
@@ -1,10 +1,10 @@
 ril-card {
-	background-color: $grey-50;
+	background-color: material-palette(grey, 50);
 	padding: $p-md;
 	box-shadow: $s-md;
 	border-radius: $r-md;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	background: $main-800;
+	background: main-palette(800);
 }
