--- a/projects/rilke-ui/src/lib/components/input/input.component.scss
+++ b/projects/rilke-ui/src/lib/components/input/input.component.scss
@@ -1,6 +1,6 @@
 ril-input {
 	border-radius: $r-md;
-	color: $main-contrast-800;
+	color: main-contrast(800);
 	display: flex;
 	font-size: $f-size-md;
 	line-height: $f-line-md;
@@ -9,8 +9,8 @@ ril-input {
 
 	.ril-input-wrap {
 		align-items: center;
-		background: $main-800;
-		border: 1px solid $main-800;
+		background: main-palette(800);
+		border: 1px solid main-palette(800);
 		border-radius: inherit;
 		cursor: text;
 		display: flex;
@@ -45,13 +45,13 @@ ril-input {
 			width: 100%;
 
 			// @include placeholder {
-			// 	color: $main-contrast-700;
+			// 	color: main-contrast(700);
 			// }
 		}
 
 		.input-prefix,
 		.input-suffix {
-			color: $main-contrast-800;
+			color: main-contrast(800);
 			flex: none;
 			padding: 0 0.2em;
 		}
@@ -62,7 +62,7 @@ ril-input {
 
 		.char-limiting {
 			align-items: center;
-			color: $main-contrast-800;
+			color: main-contrast(800);
 			display: flex;
 			font-size: 0.9em;
 			justify-content: center;
@@ -73,43 +73,43 @@ ril-input {
 
 	:host-context(ril-form-group.float) {
 		.ka-input-wrap {
-			border-color: $main-contrast-700;
+			border-color: main-contrast(700);
 		}
 	}
 
 	&:hover {
-		color: $main-contrast-700;
+		color: main-contrast(700);
 
 		.ril-input-wrap {
-			background: $main-700;
-			border-color: $main-700;
+			background: main-palette(700);
+			border-color: main-palette(700);
 		}
 	}
 
 	&.input-focus {
-		color: $main-contrast-800;
+		color: main-contrast(800);
 
 		.ril-input-wrap {
-			background: $main-700;
-			border-color: $main-200;
+			background: main-palette(700);
+			border-color: main-palette(200);
 		}
 	}
 
 	&.ng-invalid.ng-touched,
 	.has-error & {
 		.ril-input-wrap {
-			background-color: $main-700;
+			background-color: main-palette(700);
 			outline: $error-color solid 1px;
 		}
 	}
 
 	&.input-disabled,
 	&.input-readonly {
-		color: $main-contrast-500;
+		color: main-contrast(500);
 
 		.ril-input-wrap {
-			background-color: $main-500;
-			border-color: $main-500;
+			background-color: main-palette(500);
+			border-color: main-palette(500);
 			box-shadow: none !important;
 			cursor: not-allowed;
 
