--- a/projects/rilke-ui/src/lib/components/range-slider/range-slider.component.scss
+++ b/projects/rilke-ui/src/lib/components/range-slider/range-slider.component.scss
@@ -11,7 +11,7 @@ ril-range-slider {
 	.mat-accent .mat-slider-track-fill,
 	.mat-accent .mat-slider-thumb,
 	.mat-accent .mat-slider-thumb-label {
-		background-color: $main-800;
+		background-color: main-palette(800);
 	}
 
 	.mat-accent .mat-slider-thumb-label-text {
@@ -19,6 +19,6 @@ ril-range-slider {
 	}
 
 	.mat-slider-track-background {
-		background-color: $main-600;
+		background-color: main-palette(600);
 	}
 }
