--- a/projects/rilke-ui/src/scss/styles.scss
+++ b/projects/rilke-ui/src/scss/styles.scss
@@ -1,12 +1,46 @@
 @use "sass:math";
-@import "./colors";
+@use "node_modules/@angular/material" as mat;
+@import "./palette";
 @import "./structure";
 @import "./typography";
+
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$rilke-ui-primary: mat.define-palette(mat.$indigo-palette);
+$rilke-ui-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$rilke-ui-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$rilke-ui-theme: mat.define-light-theme(
+	(
+		color: (
+			primary: $rilke-ui-primary,
+			accent: $rilke-ui-accent,
+			warn: $rilke-ui-warn,
+		),
+	)
+);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($rilke-ui-theme);
+
+@import "node_modules/@angular/cdk/overlay";
+@include cdk-overlay();
+
+@import "./components";
 
 body {
 	mat-bottom-sheet-container {
 		padding: 1rem !important;
-		background: $main-800 !important;
+		background: main-palette(800) !important;
 		border-top-right-radius: $r-md !important;
 		border-top-left-radius: $r-md !important;
 	}
@@ -24,7 +58,7 @@ body {
 			max-width: 100%;
 			position: static;
 			padding: 1rem !important;
-			background: $main-800 !important;
+			background: main-palette(800) !important;
 			border-radius: $r-md;
 		}
 	}
@@ -42,9 +76,43 @@ body {
 			max-width: 100%;
 			position: static;
 			padding: 1rem !important;
-			background: $main-800 !important;
+			background: main-palette(800) !important;
 			border-radius: $r-md;
 			margin-bottom: 2rem;
 		}
+	}
+}
+
+.scrollable {
+	&::-webkit-scrollbar {
+		overflow: auto;
+		width: 0;
+		background: transparent;
+	}
+
+	overflow: auto;
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+	scroll-behavior: smooth;
+}
+
+* {
+	-webkit-touch-callout: none;
+	outline: none !important;
+
+	&:active {
+		outline: none !important;
+	}
+
+	&:focus {
+		outline: none !important;
+	}
+
+	&:visited {
+		outline: none !important;
+	}
+
+	&:hover {
+		outline: none !important;
 	}
 }
