Light Dark Mode

--- a/projects/rilke-ui/src/lib/components/datepicker/datepicker.component.scss
+++ b/projects/rilke-ui/src/lib/components/datepicker/datepicker.component.scss
@@ -72,7 +72,7 @@ ril-date-picker {
 
 		.input-prefix,
 		.input-suffix {
-			color: main-palette(500);
+			color: main-contrast(500);
 			flex: none;
 			padding: 0 0.2em;
 		}
