--- a/projects/rilke-ui/src/scss/components.scss
+++ b/projects/rilke-ui/src/scss/components.scss
@@ -63,6 +63,76 @@ snack-bar-container {
 	padding: 0 !important;
 	overflow: hidden !important;
 }
+ril-auto-complete {
+	border-radius: $r-md;
+	display: block;
+	outline: none;
+	width: 100%;
+	transition: none;
+
+	&:hover,
+	&:focus {
+		transition: none;
+	}
+
+	.ka-input {
+		border-radius: inherit;
+		transition: none;
+	}
+
+	.autocomplete-list {
+		display: none;
+		position: relative;
+		z-index: 999;
+
+		&.opened {
+			display: block;
+		}
+
+		.list-ul {
+			background: red;
+			border: 1px solid green;
+			box-shadow: $s-md;
+			border-radius: $r-md;
+			color: blue;
+			list-style-type: none;
+			left: 0;
+			margin: 0;
+			max-height: $base-size * 23;
+			overflow: auto;
+			padding: $base-size 0;
+			position: absolute;
+			top: 0;
+			width: 100%;
+			z-index: 999;
+
+			.list-li {
+				box-shadow: 0 1px 0 rgba(#000, 0.05);
+				cursor: pointer;
+				padding: math.div($base-size, 2) ($base-size * 2);
+				transition: background 0.2s ease-in-out;
+
+				.val-mark {
+					background: none;
+					color: #000;
+					pointer-events: none;
+				}
+
+				&.active {
+					background: rgba(pink, 0.05);
+				}
+
+				&:hover {
+					background: rgba(#000, 0.05);
+				}
+
+				&:last-child {
+					box-shadow: none;
+				}
+			}
+		}
+	}
+}
 ril-badge {
 	align-items: center;
 	justify-content: center;
@@ -156,151 +226,6 @@ ril-badge {
 	&.badge-dark {
 		background: main-palette(900);
 		color: main-contrast(900);
-	}
-}
-ril-auto-complete {
-	border-radius: $r-md;
-	display: block;
-	outline: none;
-	width: 100%;
-	transition: none;
-
-	&:hover,
-	&:focus {
-		transition: none;
-	}
-
-	.ka-input {
-		border-radius: inherit;
-		transition: none;
-	}
-
-	.autocomplete-list {
-		display: none;
-		position: relative;
-		z-index: 999;
-
-		&.opened {
-			display: block;
-		}
-
-		.list-ul {
-			background: red;
-			border: 1px solid green;
-			box-shadow: $s-md;
-			border-radius: $r-md;
-			color: blue;
-			list-style-type: none;
-			left: 0;
-			margin: 0;
-			max-height: $base-size * 23;
-			overflow: auto;
-			padding: $base-size 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-			z-index: 999;
-
-			.list-li {
-				box-shadow: 0 1px 0 rgba(#000, 0.05);
-				cursor: pointer;
-				padding: ($base-size / 2) ($base-size * 2);
-				transition: background 0.2s ease-in-out;
-
-				.val-mark {
-					background: none;
-					color: #000;
-					pointer-events: none;
-				}
-
-				&.active {
-					background: rgba(pink, 0.05);
-				}
-
-				&:hover {
-					background: rgba(#000, 0.05);
-				}
-
-				&:last-child {
-					box-shadow: none;
-				}
-			}
-		}
-	}
-}
-ril-avatar {
-	align-items: center;
-	background: material-palette(grey, 400);
-	border-radius: 50%;
-	display: flex;
-	font-weight: 600;
-	justify-content: center;
-	line-height: 1;
-	position: relative;
-	text-transform: uppercase;
-	flex-shrink: 0;
-	cursor: default;
-	user-select: none; /* supported by Chrome and Opera */
-
-	img {
-		max-height: 100%;
-		max-width: 100%;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		object-position: center;
-		transition: 0.5s ease;
-		border-radius: inherit;
-	}
-
-	.initial {
-		display: flex;
-		align-content: center;
-		justify-content: center;
-		align-items: center;
-		transition: 0.5s ease;
-		width: 100%;
-		height: 100%;
-		background: material-palette(grey, 400);
-		color: material-palette(grey, 700);
-		border-radius: inherit;
-	}
-
-	.icon {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		padding: 0;
-		color: material-palette(grey, 700);
-	}
-
-	&.selectable {
-		cursor: pointer;
-
-		.select-image {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			color: material-palette(grey, 700);
-			z-index: 3;
-			opacity: 100%;
-			transition: 0.5s ease;
-			font-size: 75%;
-		}
-
-		&:hover {
-			.select-image {
-				opacity: 100%;
-			}
-
-			img,
-			.initial {
-				opacity: 30%;
-			}
-		}
 	}
 }
 ril-card {
@@ -424,6 +349,81 @@ ril-checkbox {
 						transform: scale(0.8);
 					}
 				}
+			}
+		}
+	}
+}
+ril-avatar {
+	align-items: center;
+	background: material-palette(grey, 400);
+	border-radius: 50%;
+	display: flex;
+	font-weight: 600;
+	justify-content: center;
+	line-height: 1;
+	position: relative;
+	text-transform: uppercase;
+	flex-shrink: 0;
+	cursor: default;
+	user-select: none; /* supported by Chrome and Opera */
+
+	img {
+		max-height: 100%;
+		max-width: 100%;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
+		transition: 0.5s ease;
+		border-radius: inherit;
+	}
+
+	.initial {
+		display: flex;
+		align-content: center;
+		justify-content: center;
+		align-items: center;
+		transition: 0.5s ease;
+		width: 100%;
+		height: 100%;
+		background: material-palette(grey, 400);
+		color: material-palette(grey, 700);
+		border-radius: inherit;
+	}
+
+	.icon {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 0;
+		color: material-palette(grey, 700);
+	}
+
+	&.selectable {
+		cursor: pointer;
+
+		.select-image {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			color: material-palette(grey, 700);
+			z-index: 3;
+			opacity: 100%;
+			transition: 0.5s ease;
+			font-size: 75%;
+		}
+
+		&:hover {
+			.select-image {
+				opacity: 100%;
+			}
+
+			img,
+			.initial {
+				opacity: 30%;
 			}
 		}
 	}
@@ -890,7 +890,7 @@ ril-date-picker {
 
 		.input-prefix,
 		.input-suffix {
-			color: main-palette(500);
+			color: main-contrast(500);
 			flex: none;
 			padding: 0 0.2em;
 		}
@@ -1166,7 +1166,7 @@ ril-form-group {
 			transition: all 0.2s;
 			top: -0.5em;
 			margin-left: $base-size * 1.5;
-			color: main-palette(500);
+			color: main-contrast(800);
 			z-index: 3;
 			line-height: 1;
 			padding: 0 1px;
@@ -1177,7 +1177,7 @@ ril-form-group {
 				content: " ";
 				display: block;
 				position: absolute;
-				background: main-palette(700);
+				background: main-palette(800);
 				height: 1px;
 				top: 50%;
 				left: -0.3em;
@@ -1263,7 +1263,7 @@ ril-input {
 
 		.input-prefix,
 		.input-suffix {
-			color: main-contrast(800);
+			color: main-contrast(500);
 			flex: none;
 			padding: 0 0.2em;
 		}
@@ -1274,7 +1274,7 @@ ril-input {
 
 		.char-limiting {
 			align-items: center;
-			color: main-contrast(800);
+			color: main-contrast(500);
 			display: flex;
 			font-size: 0.9em;
 			justify-content: center;
@@ -1578,14 +1578,14 @@ ril-pagination {
 				background: main-palette(700);
 				border-color: main-palette(700);
 				border-left: 1px solid #353535;
-				color: #FFF;
+				color: main-contrast(500);
 				padding: 0.8rem 1.6rem;
 				cursor: pointer;
 
 				&:hover {
 					background: main-palette(500);
 					border-color: main-palette(500);
-					color: #FFF;
+					color: main-contrast(500);
 				}
 			}
 
@@ -1609,7 +1609,7 @@ ril-pagination {
 			.page-link {
 				background: main-palette(500);
 				border-color: transparent;
-				color: #FFF;
+				color: main-contrast(500);
 			}
 		}
 
@@ -1650,7 +1650,7 @@ ril-radio {
 	align-items: flex-start;
 	display: flex;
 	flex-direction: column;
-	margin: -$base-size / 2;
+	margin: -(math.div($base-size, 2));
 
 	&.ril-radio-horizontal {
 		flex-direction: row;
@@ -2019,7 +2019,7 @@ ril-text-area {
 
 			span {
 				display: block;
-				margin: ($base-size / 2) 2px 0;
+				margin: math.div($base-size, 2) 2px 0;
 			}
 		}
 	}
