--- a/projects/rilke-ui/src/scss/styles.scss
+++ b/projects/rilke-ui/src/scss/styles.scss
@@ -9,11 +9,7 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$rilke-ui-primary: mat.define-palette(mat.$indigo-palette);
-$rilke-ui-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$rilke-ui-warn: mat.define-palette(mat.$red-palette);
+$rilke-ui-primary: mat.define-palette($main-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
@@ -21,8 +17,8 @@ $rilke-ui-theme: mat.define-light-theme(
 	(
 		color: (
 			primary: $rilke-ui-primary,
-			accent: $rilke-ui-accent,
-			warn: $rilke-ui-warn,
+			accent: $rilke-ui-primary,
+			warn: $rilke-ui-primary,
 		),
 	)
 );
