--- a/projects/rilke-ui/src/lib/components/form-group/form-group.component.scss
+++ b/projects/rilke-ui/src/lib/components/form-group/form-group.component.scss
@@ -12,7 +12,7 @@ ril-form-group {
 			opacity: 100%;
 			transition: all 0.2s;
 			top: -0.5em;
-			margin-left: $base-size * 1.5;
+			margin-left: $base-size;
 			color: main-contrast(800);
 			z-index: 3;
 			line-height: 1;
