--- a/projects/rilke-ui/src/lib/components/text-area/text-area.component.scss
+++ b/projects/rilke-ui/src/lib/components/text-area/text-area.component.scss
@@ -73,7 +73,7 @@ ril-text-area {
 		.ril-textarea-wrap {
 			.textarea-control {
 				background: main-palette(700);
-				border-color: main-palette(200);
+				border-color: main-contrast(200);
 				box-shadow: $s-md;
 			}
 		}
