--- a/projects/rilke-ui/src/lib/components/tabs/tab/tab.component.scss
+++ b/projects/rilke-ui/src/lib/components/tabs/tab/tab.component.scss
@@ -1,6 +1,10 @@
 ril-tab {
-	display: flex;
+	display: none;
 	align-items: center;
 	justify-content: space-between;
 	height: 100%;
+
+	&.active {
+		display: flex;
+	}
 }
